[package]
authors = ["Tom Meyer <tom.meyer@uni-rostock.de>"]
edition = "2018"
# TODO: Rename: Ember, Cinder, Ignite, enclose... all names taken^^
# (r)emmex? -> rust embedded execution
name = "embedded_rust"
version = "0.2.0"

[workspace]
members = ["embedded_rust_macros", "programs"]

[dependencies]
# crossbeam-queue = {version = "0.2.3", default-features = false, features = ["alloc"]}
# once_cell = {version = "1.4.0", default-features = false}
bbqueue = "0.4.11"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
embedded-hal = {version = "0.2.4"}
futures = {version = "0.3.5", default-features = false}
heapless = "0.5.6"
linked_list_allocator = {version = "0.8.6"}
log = "0.4.11"
memchr = {version = "2", default-features = false}
nb = "1.0.0"
nom-uri = {git = "https://github.com/Skasselbard/nom-uri"}
pin-project = "0.4.23"
stm32f1xx-hal = {version = "0.6.1", features = ["stm32f103", "rt", "medium"]}

# [profile.dev]
# panic = "abort"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
debug-assertions = true 
lto = true # better optimizations
opt-level = "z" # optimized for size
# panic = "abort"

[profile.dev]
opt-level = "z"

# https://rust-embedded.github.io/book/unsorted/speed-vs-size.html
[profile.dev.package."*"]
opt-level = "z" # optimized for size

[lib]
bench = false
path = "src/lib.rs"
test = false

[features]
default = ["stm32f1xx"]
stm32f1xx = []
