[package]
authors = ["\"tom\" <\"tom.meyer89@gmail.com\">"]
edition = "2018"
name = "embedded_rust_devices"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
embedded-hal = {version = "0.2.3"}
nb = "0.1.2"
nom-uri = {git = "https://github.com/Skasselbard/nom-uri"}
stm32f1xx-hal = {version = "0.5.3", features = ["stm32f103", "rt", "medium"]}
# nom-uri = { path = "../nom-uri"}
cortex-m-semihosting = "0.3.5"
linked_list_allocator = {version = "0.8.4"}
log = "0.4.8"
# concurency safe data structures
crossbeam-queue = {version = "0.2.1", default-features = false, features = ["alloc"]}
# static initialization
conquer-once = {version = "0.2.0", default-features = false}

[profile.dev]
test = false

[profile.test]
test = false
