[package]
authors = ["\"tom\" <\"tom.meyer89@gmail.com\">"]
edition = "2018"
name = "embedded_rust_macros"
version = "0.1.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json = "0.12.4"
embedded_rust_devices = {path = "../devices"}
quote = "1.0.7"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0"
syn = {version = "1.0.34", features = ["full"]}
