[package]
authors = ["\"tom\" <\"tom.meyer89@gmail.com\">"]
default-run = "main"
edition = "2018"
name = "programs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#TODO: reexport crates?
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "0.3.5"
embedded-hal = {version = "0.2.4"}
embedded_rust = {path = "../"}
embedded_rust_macros = {path = "../embedded_rust_macros"}
futures = {version = "0.3.5", default-features = false}
log = "0.4.11"
stm32f1xx-hal = {version = "0.7.0", features = ["stm32f103", "rt", "medium"]}

[[bin]]
bench = false
name = "main"
path = "src/main.rs"
test = false

[[bin]]
bench = false
name = "main_expanded"
path = "src/main_expanded.rs"
test = false
